--- a/course-site/module2/index.html
+++ b/course-site/module2/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hello World!</title>
+	<title>Assignment solution for Module 2</title>
 </head>
 <body>
-<h1>Module 2 assignment </h1>
+<h1>Our Menu</h1>
 
 </body>
 </html>
